# WordAnalizer

./: .gitignore  App.yaml  Main.py  README.md  UI.py  load_local_files.py  pyproject.toml  wl_analysis.yaml  wl_app.py
Files/: template.json
UI/: chat_test.py  file_upload.py  notes.txt
modules/: UI_manager.py  config.py  db.py  file_handler.py  json_query.sql  llm_ai_client.py  llm_client.py
modules/util/: openai_api.py
