[project]
name = "wl-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "envyaml>=1.10.211231",
    "gradio>=5.34.2",
    "markitdown[all]>=0.1.2",
    "oci>=2.154.2",
    "oracledb>=3.1.1",
    "pathlib>=1.0.1",
    "python-box>=7.3.2",
    "python-dotenv>=1.1.0",
]